ledokol-config/templates/auto-running-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-runnung
  labels:
    app: auto-runnung
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-runnung
  template:
    metadata:
      labels:
        app: auto-runnung
    spec:
      containers:
      - name: auto-runnung
        image: alexxxtrsv/tests-auto-running:v1.3
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: log-storage
          mountPath: /home/spring/logs
      volumes:
      - name: log-storage
        emptyDir: {}
