ledokol-config/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kirphone/ledokol-frontend:0.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
