ledokol-config/templates/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: alexxxtrsv/main-service:v2.3
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: log-storage
          mountPath: /home/spring/logs
      volumes:
      - name: log-storage
        emptyDir: {}
