ledokol-config/templates/target-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-system
  labels:
    app: target-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-system
  template:
    metadata:
      labels:
        app: target-system
    spec:
      containers:
      - name: target-system
        image: alexxxtrsv/target-system:v1.0
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: log-storage
          mountPath: /home/spring/logs
      volumes:
      - name: log-storage
        emptyDir: {}
