ledokol-config/templates/test-distributor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-distributor
  labels:
    app: test-distributor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-distributor
  template:
    metadata:
      labels:
        app: test-distributor
    spec:
      containers:
      - name: test-distributor
        image: alexxxtrsv/test-distributor:v1.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8087
        volumeMounts:
        - name: log-storage
          mountPath: /home/spring/logs
      volumes:
      - name: log-storage
        emptyDir: {}
