ledokol-config/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
 labels:
   app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    name: frontend
