ledokol-config/templates/generator-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: generator
 labels:
   app: generator
spec:
  ports:
  - port: 1455
    name: main
  clusterIP: None
  selector:
    app: generator
