ledokol-config/templates/main-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: main-service
 labels:
   app: main
spec:
  selector:
    app: main
  ports:
  - port: 8080
    name: main
