ledokol-config/templates/frontend-ingress-nuxt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-nuxt
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(_nuxt|management|script_creation|test_creation)(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
