ledokol-config/templates/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /main(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 8080
